cml.2.7.0/devnet_i-05f099d5e82cf3a6c_20250420_014939.json
{
    "instance_status": {
        "status": "Details Found",
        "state": "running",
        "details": {}
    },
    "iam_permissions": {
        "status": "Checked (Assumed for Root)",
        "details": {
            "ec2:DescribeInstances": "Allowed (Assumed for Root)",
            "ec2:DescribeInstanceStatus": "Allowed (Assumed for Root)",
            "ec2:DescribeSecurityGroups": "Allowed (Assumed for Root)",
            "ec2:DescribeNetworkAcls": "Allowed (Assumed for Root)",
            "ec2:DescribeSubnets": "Allowed (Assumed for Root)",
            "ec2:GetConsoleOutput": "Allowed (Assumed for Root)",
            "iam:SimulatePrincipalPolicy": "Allowed (Assumed for Root)",
            "sts:GetCallerIdentity": "Allowed (Assumed for Root)",
            "ssm:SendCommand": "Allowed (Assumed for Root)",
            "ssm:GetCommandInvocation": "Allowed (Assumed for Root)"
        },
        "all_required_met": true
    },
    "security_groups": {
        "status": "Checked",
        "details": {
            "outbound_http": "Allowed",
            "outbound_https": "Allowed",
            "inbound_ssh": "Denied/Missing"
        },
        "ids_found": [
            "sg-04f32dc696d422bbc"
        ]
    },
    "nacls": {
        "finding_status": "Found (Explicit)",
        "nacl_id": "acl-01592d704981aefee",
        "rule_check_status": "Checked",
        "rule_details": {
            "nacl_id": "acl-01592d704981aefee",
            "outbound_http": "Allowed",
            "outbound_https": "Allowed",
            "inbound_ephemeral": "Allowed"
        },
        "raw_nacl_details": {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-04af2ac4aa1b9cf7d",
                    "NetworkAclId": "acl-01592d704981aefee",
                    "SubnetId": "subnet-0e4840f20f7beb55d"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "Egress": true,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 101
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "Egress": true,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32768
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "Egress": false,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 101
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "Egress": false,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32768
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-01592d704981aefee",
            "Tags": [],
            "VpcId": "vpc-00e2475b078c8f1bb",
            "OwnerId": "450339903191"
        }
    },
    "raw_security_group_rules": [
        {
            "GroupId": "sg-04f32dc696d422bbc",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "allow HTTP outbound",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "allow HTTPS outbound",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "devnet-workstation-sg-7f767e19"
                }
            ],
            "VpcId": "vpc-00e2475b078c8f1bb",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:450339903191:security-group/sg-04f32dc696d422bbc",
            "OwnerId": "450339903191",
            "GroupName": "tf-sg-workstation-7f767e19",
            "Description": "Devnet workstation security group",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3389,
                    "ToPort": 3389,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "allow RDP",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "raw_nacl_rules": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-04af2ac4aa1b9cf7d",
                    "NetworkAclId": "acl-01592d704981aefee",
                    "SubnetId": "subnet-0e4840f20f7beb55d"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "Egress": true,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 101
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "Egress": true,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32768
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "Egress": false,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 101
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "Egress": false,
                    "Ipv6CidrBlock": "::/0",
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32768
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-01592d704981aefee",
            "Tags": [],
            "VpcId": "vpc-00e2475b078c8f1bb",
            "OwnerId": "450339903191"
        }
    ],
    "ssm_check": {
        "status": "Passed",
        "details": {
            "ssm_status": "Success",
            "output": "SSM Agent is responding"
        }
    },
    "ssh_check": {
        "status": "Failed (Timeout)",
        "details": {
            "error": "Connection timed out (10s)."
        }
    },
    "system_log": {
        "status": "Retrieved",
        "details": {
            "log_content": "M4M\u000b{\uc289Oz\u07ae'\u001b)]vX0Vw4X\u001cr*'}\u0014n\u05fb{nm4]=Q=g%^^L-e\u001b{n=]=\u07ae'9^{M4M\u0002ibN92\f\u0000a"
        }
    },
    "cloudinit_logs": {
        "/var/log/cloud-init.log": {
            "stdout": "2021-11-17 22:25:56,904 - handlers.py[DEBUG]: finish: modules-final/config-salt-minion: SUCCESS: config-salt-minion ran successfully\n2021-11-17 22:25:56,904 - stages.py[DEBUG]: Running module reset_rmc (<module 'cloudinit.config.cc_reset_rmc' from '/usr/lib/python3/dist-packages/cloudinit/config/cc_reset_rmc.py'>) with frequency once-per-instance\n2021-11-17 22:25:56,904 - handlers.py[DEBUG]: start: modules-final/config-reset_rmc: running config-reset_rmc with frequency o [...]
            "stderr": "",
            "status": "Success"
        },
        "/var/log/cloud-init-output.log": {
            "stdout": "ci-info: ++++++++++++++++++++++++++++++++++++++Net device info+++++++++++++++++++++++++++++++++++++++\nci-info: +--------+------+-----------------------------+---------------+--------+-------------------+\nci-info: | Device |  Up  |           Address           |      Mask     | Scope  |     Hw-Address    |\nci-info: +--------+------+-----------------------------+---------------+--------+-------------------+\nci-info: | ens160 | True |         192.168.4.1         | 255.255. [...]
            "stderr": "",
            "status": "Success"
        },
        "/var/log/amazon/ssm/amazon-ssm-agent.log": {
            "stdout": "2025-04-20 07:48:33.3622 INFO [ssm-agent-worker] [MessageService] [EngineProcessor] document aws.ssm.ecd7f7d3-6342-4663-a19b-c53ad90f383f.i-05f099d5e82cf3a6c submission started\n2025-04-20 07:48:33.3624 INFO [ssm-agent-worker] [MessageService] [EngineProcessor] document aws.ssm.ecd7f7d3-6342-4663-a19b-c53ad90f383f.i-05f099d5e82cf3a6c submission ended\n2025-04-20 07:48:33.3624 INFO [ssm-agent-worker] [MessageService] [CommandProcessorWrapper] [Idempotency] writing command i [...]
            "stderr": "",
            "status": "Success"
        },
        "/var/log/syslog": {
            "stdout": "Apr 20 07:07:04 expert-cws /usr/lib/gdm3/gdm-x-session[1338]: dbus-daemon[1338]: [session uid=130 pid=1338] Successfully activated service 'org.gnome.Shell.Notifications'\nApr 20 07:07:05 expert-cws gnome-shell[1394]: Error looking up permission: GDBus.Error:org.freedesktop.portal.Error.NotFound: No entry for geolocation\nApr 20 07:07:05 expert-cws gnome-shell[1394]: JS WARNING: [resource:///org/gnome/shell/ui/layout.js 24]: reference to undefined property \"MetaWindowX11\ [...]
            "stderr": "",
            "status": "Success"
        },
        "/var/log/messages": {
            "stdout": "",
            "stderr": "tail: cannot open '/var/log/messages' for reading: No such file or directory\nfailed to run commands: exit status 1",
            "status": "Failed"
        }
    },
    "iam_role_and_policy": {
        "profile_arn": "arn:aws:iam::450339903191:instance-profile/cml-ssm-profile",
        "role_name": "cml-ssm-role",
        "attached_policies": [
            "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
        ],
        "inline_policies": [],
        "error": null,
        "ssm_policy_attached": true
    },
    "launch_metadata": {
        "ami_id": "ami-0a0e4ef95325270c9",
        "instance_type": "t3.large",
        "key_name": "terraform-key",
        "user_data_present": false,
        "launch_time": "2025-04-20 07:04:59+00:00"
    },
    "network_diagnostics": {
        "==== ip addr show ====": {
            "stdout": "1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000\n    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00\n    inet 127.0.0.1/8 scope host lo\n       valid_lft forever preferred_lft forever\n    inet6 ::1/128 scope host \n       valid_lft forever preferred_lft forever\n2: eth0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 9001 qdisc mq state UP group default qlen 1000\n    link/ether 02:1a:df:76:40:ed brd ff:ff:ff:ff:ff:ff\n    inet 10 [...]
            "stderr": "",
            "status": "Success"
        },
        "==== ip route ====": {
            "stdout": "default via 10.0.0.1 dev eth0 proto dhcp src 10.0.0.5 metric 100 \n10.0.0.0/24 dev eth0 proto kernel scope link src 10.0.0.5 \n10.0.0.1 dev eth0 proto dhcp scope link src 10.0.0.5 metric 100 \n172.17.0.0/16 dev docker0 proto kernel scope link src 172.17.0.1 linkdown \n",
            "stderr": "",
            "status": "Success"
        },
        "==== ip rule ====": {
            "stdout": "0:\tfrom all lookup local\n32766:\tfrom all lookup main\n32767:\tfrom all lookup default\n",
            "stderr": "",
            "status": "Success"
        },
        "==== ss -tulpen ====": {
            "stdout": "Netid   State    Recv-Q   Send-Q     Local Address:Port      Peer Address:Port  Process                                                                         \nudp     UNCONN   0        0                0.0.0.0:5353           0.0.0.0:*      users:((\"avahi-daemon\",pid=638,fd=12)) uid:120 ino:25723 sk:1 <->              \nudp     UNCONN   0        0                0.0.0.0:50547          0.0.0.0:*      users:((\"avahi-daemon\",pid=638,fd=14)) uid:120 ino:25725 sk:2 <->    [...]
            "stderr": "",
            "status": "Success"
        },
        "==== arp -a ====": {
            "stdout": "",
            "stderr": "/var/lib/amazon/ssm/i-05f099d5e82cf3a6c/document/orchestration/940f693c-27af-4eea-8787-e4e4f689ccc0/awsrunShellScript/0.awsrunShellScript/_script.sh: 1: arp: not found\nfailed to run commands: exit status 127",
            "status": "Failed"
        },
        "==== /etc/resolv.conf ====": {
            "stdout": "# This file is managed by man:systemd-resolved(8). Do not edit.\n#\n# This is a dynamic resolv.conf file for connecting local clients to the\n# internal DNS stub resolver of systemd-resolved. This file lists all\n# configured search domains.\n#\n# Run \"resolvectl status\" to see details about the uplink DNS servers\n# currently in use.\n#\n# Third party programs must not access this file directly, but only through the\n# symlink at /etc/resolv.conf. To manage man:resolv.c [...]
            "stderr": "",
            "status": "Success"
        },
        "==== ping 8.8.8.8 ====": {
            "stdout": "PING 8.8.8.8 (8.8.8.8) 56(84) bytes of data.\n64 bytes from 8.8.8.8: icmp_seq=1 ttl=54 time=9.36 ms\n64 bytes from 8.8.8.8: icmp_seq=2 ttl=54 time=9.39 ms\n64 bytes from 8.8.8.8: icmp_seq=3 ttl=54 time=9.39 ms\n\n--- 8.8.8.8 ping statistics ---\n3 packets transmitted, 3 received, 0% packet loss, time 2003ms\nrtt min/avg/max/mdev = 9.358/9.378/9.389/0.014 ms\n",
            "stderr": "",
            "status": "Success"
        },
        "==== curl http://169.254.169.254/latest/meta-data/ ====": {
            "stdout": "",
            "stderr": "",
            "status": "Success"
        },
        "==== netstat -nr ====": {
            "stdout": "",
            "stderr": "/var/lib/amazon/ssm/i-05f099d5e82cf3a6c/document/orchestration/85aa1ec8-a4d4-40a1-b3a6-097af8f36bf3/awsrunShellScript/0.awsrunShellScript/_script.sh: 1: netstat: not found\n",
            "status": "Success"
        },
        "==== tc qdisc show ====": {
            "stdout": "qdisc noqueue 0: dev lo root refcnt 2 \nqdisc mq 0: dev eth0 root \nqdisc fq_codel 0: dev eth0 parent :2 limit 10240p flows 1024 quantum 1514 target 5.0ms interval 100.0ms memory_limit 32Mb ecn \nqdisc fq_codel 0: dev eth0 parent :1 limit 10240p flows 1024 quantum 1514 target 5.0ms interval 100.0ms memory_limit 32Mb ecn \nqdisc noqueue 0: dev docker0 root refcnt 2 \n",
            "stderr": "",
            "status": "Success"
        },
        "==== dmesg | grep -i network ====": {
            "stdout": "[    0.844362] drop_monitor: Initializing network drop monitor service\n[    1.065575] ena 0000:00:05.0: Elastic Network Adapter (ENA) found at mem febf4000, mac addr 02:1a:df:76:40:ed\n[   22.775761] systemd[1]: Listening on Network Service Netlink Socket.\n[   37.716745] audit: type=1400 audit(1745132757.327:3): apparmor=\"STATUS\" operation=\"profile_load\" profile=\"unconfined\" name=\"/usr/lib/NetworkManager/nm-dhcp-client.action\" pid=587 comm=\"apparmor_parser\"\n[  [...]
            "stderr": "",
            "status": "Success"
        },
        "==== systemctl status networking ====": {
            "stdout": "",
            "stderr": "Unit networking.service could not be found.\n",
            "status": "Success"
        },
        "==== /etc/network/interfaces ====": {
            "stdout": "# Automatically generated by the vm import process\nauto lo\nauto eth0\n",
            "stderr": "",
            "status": "Success"
        },
        "==== /etc/netplan/*.yaml ====": {
            "stdout": "# Automatically generated by the vm import process\n network:\n     ethernets:\n         eth0:\n             dhcp4: true\n             optional: false\n         ens5:\n             dhcp4: true\n             optional: false\n     version: 2\n",
            "stderr": "",
            "status": "Success"
        },
        "==== SSM Agent Status ====": {
            "stdout": "\u25cf amazon-ssm-agent.service - amazon-ssm-agent\n     Loaded: loaded (/lib/systemd/system/amazon-ssm-agent.service; enabled; vendor preset: enabled)\n     Active: active (running) since Sun 2025-04-20 07:06:02 UTC; 43min ago\n   Main PID: 763 (amazon-ssm-agen)\n      Tasks: 37 (limit: 9315)\n     Memory: 114.5M\n     CGroup: /system.slice/amazon-ssm-agent.service\n             \u251c\u2500 763 /usr/bin/amazon-ssm-agent\n             \u251c\u2500 929 /usr/bin/ssm-agent-w [...]
            "stderr": "",
            "status": "Success"
        },
        "==== SSM Agent Log ====": {
            "stdout": "      \"endDateTime\": \"2025-04-20T07:49:14.021Z\",\n      \"outputS3BucketName\": \"\",\n      \"outputS3KeyPrefix\": \"\",\n      \"stepName\": \"\",\n      \"standardOutput\": \"# Automatically generated by the vm import process\\n network:\\n     ethernets:\\n         eth0:\\n             dhcp4: true\\n             optional: false\\n         ens5:\\n             dhcp4: true\\n             optional: false\\n     version: 2\\n\",\n      \"standardError\": \"\"\n    }\n  [...]
            "stderr": "",
            "status": "Success"
        },
        "==== SSM Agent Region Config ====": {
            "stdout": "",
            "stderr": "cat: /etc/amazon/ssm/amazon-ssm-agent.json: No such file or directory\n",
            "status": "Success"
        },
        "==== SSM Agent Snap Status ====": {
            "stdout": "",
            "stderr": "Unit snap.amazon-ssm-agent.amazon-ssm-agent.service could not be found.\n",
            "status": "Success"
        },
        "==== SSM Agent Snap Log ====": {
            "stdout": "",
            "stderr": "tail: cannot open '/var/snap/amazon-ssm-agent/common/amazon-ssm-agent.log' for reading: No such file or directory\n",
            "status": "Success"
        }
    }
}
